# CostPilot

./: run.md
costpilot/: .gitignore  docker-compose.yml
costpilot/agents/common/: pyproject.toml
costpilot/agents/common/costpilot_common/: config.py  database.py  demo_analysis.py  gateway_client.py  llm.py  messaging.py  schemas.py
costpilot/agents/finops-agent/: Dockerfile  pyproject.toml
costpilot/agents/resource-agent/: Dockerfile  pyproject.toml
costpilot/agents/seed/: pyproject.toml  seed_dashboard.py  seed_data.py  seed_realistic.py
costpilot/agents/seed/generators/: financial.py  procurement.py  resources.py  sla_services.py  vendors.py
costpilot/agents/sla-agent/: Dockerfile  pyproject.toml
costpilot/agents/sla-agent/src/sla_agent/: crew.py  main.py
costpilot/agents/sla-agent/src/sla_agent/tools/: breach_predictor.py  escalation_manager.py  sla_monitor.py
costpilot/agents/spend-agent/: Dockerfile  pyproject.toml
costpilot/dashboard/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
costpilot/dashboard/src/: index.html  styles.scss
costpilot/dashboard/src/app/: app.routes.ts
costpilot/gateway/: CostPilot.Gateway.sln
costpilot/gateway/src/CostPilot.Contracts/: AgentAlertRaised.cs  InsightPublished.cs  ProposalCreated.cs  ProposalDecision.cs  ProposalExecuted.cs  TriggerAgentRun.cs
docs/: CostPilot-Project-Flow.md
docs/demo/: demo-presentation.html
docs/superpowers/plans/: 2026-03-28-costpilot-plan.md
docs/superpowers/specs/: 2026-03-28-costpilot-design.md
(+80 files in other folders)
