[project]
name = "costpilot-common"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pika>=1.3",
    "crewai[anthropic]>=1.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["costpilot_common*"]
