[project]
name = "sla-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "costpilot-common",
    "crewai[anthropic]>=1.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pika>=1.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
